Assets/_Scripts/Library/StateMachine/StateMachineTransitionParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g 2012-05-16 11:17:01

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


#pragma warning disable 3021
#pragma warning disable 0414


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
//[System.CLSCompliant(false)]
public partial class StateMachineTransitionParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGTYPE_DELEGATE", "ARGTYPE_FLOAT", "ARGTYPE_INT", "FLOAT", "ID", "INT", "NEWLINE", "NOT", "PROG", "PROGEXPR", "PROGEXPR_RESTART", "VARARGS", "VARDECL", "VARDECLBLOCK", "VARNAME", "VARTYPE", "WS", "'&'", "'('", "')'", "','", "';'", "'{'", "'|'", "'}'"
	};
	public const int EOF=-1;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int ARGTYPE_DELEGATE=4;
	public const int ARGTYPE_FLOAT=5;
	public const int ARGTYPE_INT=6;
	public const int FLOAT=7;
	public const int ID=8;
	public const int INT=9;
	public const int NEWLINE=10;
	public const int NOT=11;
	public const int PROG=12;
	public const int PROGEXPR=13;
	public const int PROGEXPR_RESTART=14;
	public const int VARARGS=15;
	public const int VARDECL=16;
	public const int VARDECLBLOCK=17;
	public const int VARNAME=18;
	public const int VARTYPE=19;
	public const int WS=20;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public StateMachineTransitionParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public StateMachineTransitionParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}
	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return StateMachineTransitionParser.tokenNames; } }
	public override string GrammarFileName { get { return "/Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g"; } }


	public AstParserRuleReturnScope<CommonTree, IToken> process() {
		TreeAdaptor = new CommonTreeAdaptor();
		return prog();
	}


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_prog() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_prog() {}

	// $ANTLR start "prog"
	// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:43:1: prog : ( declBlock )? expr -> ^( PROG ( declBlock )? expr ) ;
	[GrammarRule("prog")]
	private AstParserRuleReturnScope<CommonTree, IToken> prog()
	{
		EnterRule_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    AstParserRuleReturnScope<CommonTree, IToken> declBlock1 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> expr2 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    RewriteRuleSubtreeStream stream_declBlock=new RewriteRuleSubtreeStream(adaptor,"rule declBlock");
	    RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(43, 1);
		try
		{
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:43:6: ( ( declBlock )? expr -> ^( PROG ( declBlock )? expr ) )
			DebugEnterAlt(1);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:43:9: ( declBlock )? expr
			{
			DebugLocation(43, 9);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:43:9: ( declBlock )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			try
			{
				alt1 = dfa1.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:43:9: declBlock
				{
				DebugLocation(43, 9);
				PushFollow(Follow._declBlock_in_prog119);
				declBlock1=declBlock();
				PopFollow();

				stream_declBlock.Add(declBlock1.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(43, 20);
			PushFollow(Follow._expr_in_prog122);
			expr2=expr();
			PopFollow();

			stream_expr.Add(expr2.Tree);


			{
			// AST REWRITE
			// elements: declBlock, expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 43:25: -> ^( PROG ( declBlock )? expr )
			{
				DebugLocation(43, 28);
				// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:43:28: ^( PROG ( declBlock )? expr )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(43, 30);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PROG, "PROG"), root_1);

				DebugLocation(43, 35);
				// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:43:35: ( declBlock )?
				if (stream_declBlock.HasNext)
				{
					DebugLocation(43, 35);
					adaptor.AddChild(root_1, stream_declBlock.NextTree());

				}
				stream_declBlock.Reset();
				DebugLocation(43, 46);
				adaptor.AddChild(root_1, stream_expr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			LeaveRule_prog();
	    }
	 	DebugLocation(44, 1);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_declBlock() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_declBlock() {}

	// $ANTLR start "declBlock"
	// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:1: declBlock : ( ignore )* '{' ( ignore )* ( decl )+ ( ignore )* '}' ( ignore )* -> ^( VARDECLBLOCK ( decl )+ ) ;
	[GrammarRule("declBlock")]
	private AstParserRuleReturnScope<CommonTree, IToken> declBlock()
	{
		EnterRule_declBlock();
		EnterRule("declBlock", 2);
		TraceIn("declBlock", 2);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken char_literal4 = default(IToken);
	    IToken char_literal8 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore3 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore5 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> decl6 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore7 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore9 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree char_literal4_tree = default(CommonTree);
	    CommonTree char_literal8_tree = default(CommonTree);
	    RewriteRuleITokenStream stream_26=new RewriteRuleITokenStream(adaptor,"token 26");
	    RewriteRuleITokenStream stream_28=new RewriteRuleITokenStream(adaptor,"token 28");
	    RewriteRuleSubtreeStream stream_ignore=new RewriteRuleSubtreeStream(adaptor,"rule ignore");
	    RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
		try { DebugEnterRule(GrammarFileName, "declBlock");
		DebugLocation(48, 1);
		try
		{
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:11: ( ( ignore )* '{' ( ignore )* ( decl )+ ( ignore )* '}' ( ignore )* -> ^( VARDECLBLOCK ( decl )+ ) )
			DebugEnterAlt(1);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:13: ( ignore )* '{' ( ignore )* ( decl )+ ( ignore )* '}' ( ignore )*
			{
			DebugLocation(48, 13);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:13: ( ignore )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if ((LA2_0==NEWLINE||LA2_0==WS))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:13: ignore
					{
					DebugLocation(48, 13);
					PushFollow(Follow._ignore_in_declBlock145);
					ignore3=ignore();
					PopFollow();

					stream_ignore.Add(ignore3.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(48, 21);
			char_literal4=(IToken)Match(input,26,Follow._26_in_declBlock148);  
			stream_26.Add(char_literal4);

			DebugLocation(48, 25);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:25: ( ignore )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_0 = input.LA(1);

				if ((LA3_0==NEWLINE||LA3_0==WS))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:25: ignore
					{
					DebugLocation(48, 25);
					PushFollow(Follow._ignore_in_declBlock150);
					ignore5=ignore();
					PopFollow();

					stream_ignore.Add(ignore5.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }

			DebugLocation(48, 33);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:33: ( decl )+
			int cnt4=0;
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, decisionCanBacktrack[4]);
				try
				{
					alt4 = dfa4.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(4); }
				switch (alt4)
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:33: decl
					{
					DebugLocation(48, 33);
					PushFollow(Follow._decl_in_declBlock153);
					decl6=decl();
					PopFollow();

					stream_decl.Add(decl6.Tree);

					}
					break;

				default:
					if (cnt4 >= 1)
						goto loop4;

					EarlyExitException eee4 = new EarlyExitException( 4, input );
					DebugRecognitionException(eee4);
					throw eee4;
				}
				cnt4++;
			}
			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(48, 39);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:39: ( ignore )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, decisionCanBacktrack[5]);
				int LA5_0 = input.LA(1);

				if ((LA5_0==NEWLINE||LA5_0==WS))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:39: ignore
					{
					DebugLocation(48, 39);
					PushFollow(Follow._ignore_in_declBlock156);
					ignore7=ignore();
					PopFollow();

					stream_ignore.Add(ignore7.Tree);

					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }

			DebugLocation(48, 47);
			char_literal8=(IToken)Match(input,28,Follow._28_in_declBlock159);  
			stream_28.Add(char_literal8);

			DebugLocation(48, 51);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:51: ( ignore )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, decisionCanBacktrack[6]);
				int LA6_0 = input.LA(1);

				if ((LA6_0==NEWLINE||LA6_0==WS))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:51: ignore
					{
					DebugLocation(48, 51);
					PushFollow(Follow._ignore_in_declBlock161);
					ignore9=ignore();
					PopFollow();

					stream_ignore.Add(ignore9.Tree);

					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }



			{
			// AST REWRITE
			// elements: decl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 48:59: -> ^( VARDECLBLOCK ( decl )+ )
			{
				DebugLocation(48, 62);
				// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:48:62: ^( VARDECLBLOCK ( decl )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(48, 64);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(VARDECLBLOCK, "VARDECLBLOCK"), root_1);

				DebugLocation(48, 77);
				if (!(stream_decl.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_decl.HasNext )
				{
					DebugLocation(48, 77);
					adaptor.AddChild(root_1, stream_decl.NextTree());

				}
				stream_decl.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("declBlock", 2);
			LeaveRule("declBlock", 2);
			LeaveRule_declBlock();
	    }
	 	DebugLocation(49, 1);
		} finally { DebugExitRule(GrammarFileName, "declBlock"); }
		return retval;

	}
	// $ANTLR end "declBlock"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_decl() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_decl() {}

	// $ANTLR start "decl"
	// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:1: decl : ( ignore )* type ( ignore )* name ( ignore )* '(' ( ignore )* ( args )? ')' ( ignore )* ';' -> ^( VARDECL name type ( args )? ) ;
	[GrammarRule("decl")]
	private AstParserRuleReturnScope<CommonTree, IToken> decl()
	{
		EnterRule_decl();
		EnterRule("decl", 3);
		TraceIn("decl", 3);
	    AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
	    retval.Start = (IToken)input.LT(1);

	    CommonTree root_0 = default(CommonTree);

	    IToken char_literal15 = default(IToken);
	    IToken char_literal18 = default(IToken);
	    IToken char_literal20 = default(IToken);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore10 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> type11 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore12 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> name13 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore14 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore16 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> args17 = default(AstParserRuleReturnScope<CommonTree, IToken>);
	    AstParserRuleReturnScope<CommonTree, IToken> ignore19 = default(AstParserRuleReturnScope<CommonTree, IToken>);

	    CommonTree char_literal15_tree = default(CommonTree);
	    CommonTree char_literal18_tree = default(CommonTree);
	    CommonTree char_literal20_tree = default(CommonTree);
	    RewriteRuleITokenStream stream_22=new RewriteRuleITokenStream(adaptor,"token 22");
	    RewriteRuleITokenStream stream_23=new RewriteRuleITokenStream(adaptor,"token 23");
	    RewriteRuleITokenStream stream_25=new RewriteRuleITokenStream(adaptor,"token 25");
	    RewriteRuleSubtreeStream stream_args=new RewriteRuleSubtreeStream(adaptor,"rule args");
	    RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
	    RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
	    RewriteRuleSubtreeStream stream_ignore=new RewriteRuleSubtreeStream(adaptor,"rule ignore");
		try { DebugEnterRule(GrammarFileName, "decl");
		DebugLocation(51, 1);
		try
		{
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:6: ( ( ignore )* type ( ignore )* name ( ignore )* '(' ( ignore )* ( args )? ')' ( ignore )* ';' -> ^( VARDECL name type ( args )? ) )
			DebugEnterAlt(1);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:8: ( ignore )* type ( ignore )* name ( ignore )* '(' ( ignore )* ( args )? ')' ( ignore )* ';'
			{
			DebugLocation(51, 8);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:8: ( ignore )*
			try { DebugEnterSubRule(7);
			while (true)
			{
				int alt7=2;
				try { DebugEnterDecision(7, decisionCanBacktrack[7]);
				int LA7_0 = input.LA(1);

				if ((LA7_0==NEWLINE||LA7_0==WS))
				{
					alt7 = 1;
				}


				} finally { DebugExitDecision(7); }
				switch ( alt7 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:8: ignore
					{
					DebugLocation(51, 8);
					PushFollow(Follow._ignore_in_decl181);
					ignore10=ignore();
					PopFollow();

					stream_ignore.Add(ignore10.Tree);

					}
					break;

				default:
					goto loop7;
				}
			}

			loop7:
				;

			} finally { DebugExitSubRule(7); }

			DebugLocation(51, 16);
			PushFollow(Follow._type_in_decl184);
			type11=type();
			PopFollow();

			stream_type.Add(type11.Tree);
			DebugLocation(51, 21);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:21: ( ignore )*
			try { DebugEnterSubRule(8);
			while (true)
			{
				int alt8=2;
				try { DebugEnterDecision(8, decisionCanBacktrack[8]);
				int LA8_0 = input.LA(1);

				if ((LA8_0==NEWLINE||LA8_0==WS))
				{
					alt8 = 1;
				}


				} finally { DebugExitDecision(8); }
				switch ( alt8 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:21: ignore
					{
					DebugLocation(51, 21);
					PushFollow(Follow._ignore_in_decl186);
					ignore12=ignore();
					PopFollow();

					stream_ignore.Add(ignore12.Tree);

					}
					break;

				default:
					goto loop8;
				}
			}

			loop8:
				;

			} finally { DebugExitSubRule(8); }

			DebugLocation(51, 29);
			PushFollow(Follow._name_in_decl189);
			name13=name();
			PopFollow();

			stream_name.Add(name13.Tree);
			DebugLocation(51, 34);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:34: ( ignore )*
			try { DebugEnterSubRule(9);
			while (true)
			{
				int alt9=2;
				try { DebugEnterDecision(9, decisionCanBacktrack[9]);
				int LA9_0 = input.LA(1);

				if ((LA9_0==NEWLINE||LA9_0==WS))
				{
					alt9 = 1;
				}


				} finally { DebugExitDecision(9); }
				switch ( alt9 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:34: ignore
					{
					DebugLocation(51, 34);
					PushFollow(Follow._ignore_in_decl191);
					ignore14=ignore();
					PopFollow();

					stream_ignore.Add(ignore14.Tree);

					}
					break;

				default:
					goto loop9;
				}
			}

			loop9:
				;

			} finally { DebugExitSubRule(9); }

			DebugLocation(51, 42);
			char_literal15=(IToken)Match(input,22,Follow._22_in_decl194);  
			stream_22.Add(char_literal15);

			DebugLocation(51, 46);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:46: ( ignore )*
			try { DebugEnterSubRule(10);
			while (true)
			{
				int alt10=2;
				try { DebugEnterDecision(10, decisionCanBacktrack[10]);
				int LA10_0 = input.LA(1);

				if ((LA10_0==NEWLINE||LA10_0==WS))
				{
					alt10 = 1;
				}


				} finally { DebugExitDecision(10); }
				switch ( alt10 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:46: ignore
					{
					DebugLocation(51, 46);
					PushFollow(Follow._ignore_in_decl196);
					ignore16=ignore();
					PopFollow();

					stream_ignore.Add(ignore16.Tree);

					}
					break;

				default:
					goto loop10;
				}
			}

			loop10:
				;

			} finally { DebugExitSubRule(10); }

			DebugLocation(51, 54);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:54: ( args )?
			int alt11=2;
			try { DebugEnterSubRule(11);
			try { DebugEnterDecision(11, decisionCanBacktrack[11]);
			int LA11_0 = input.LA(1);

			if (((LA11_0>=FLOAT && LA11_0<=INT)))
			{
				alt11 = 1;
			}
			} finally { DebugExitDecision(11); }
			switch (alt11)
			{
			case 1:
				DebugEnterAlt(1);
				// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:54: args
				{
				DebugLocation(51, 54);
				PushFollow(Follow._args_in_decl199);
				args17=args();
				PopFollow();

				stream_args.Add(args17.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(11); }

			DebugLocation(51, 60);
			char_literal18=(IToken)Match(input,23,Follow._23_in_decl202);  
			stream_23.Add(char_literal18);

			DebugLocation(51, 64);
			// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:64: ( ignore )*
			try { DebugEnterSubRule(12);
			while (true)
			{
				int alt12=2;
				try { DebugEnterDecision(12, decisionCanBacktrack[12]);
				int LA12_0 = input.LA(1);

				if ((LA12_0==NEWLINE||LA12_0==WS))
				{
					alt12 = 1;
				}


				} finally { DebugExitDecision(12); }
				switch ( alt12 )
				{
				case 1:
					DebugEnterAlt(1);
					// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:64: ignore
					{
					DebugLocation(51, 64);
					PushFollow(Follow._ignore_in_decl204);
					ignore19=ignore();
					PopFollow();

					stream_ignore.Add(ignore19.Tree);

					}
					break;

				default:
					goto loop12;
				}
			}

			loop12:
				;

			} finally { DebugExitSubRule(12); }

			DebugLocation(51, 72);
			char_literal20=(IToken)Match(input,25,Follow._25_in_decl207);  
			stream_25.Add(char_literal20);



			{
			// AST REWRITE
			// elements: type, name, args
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 51:76: -> ^( VARDECL name type ( args )? )
			{
				DebugLocation(51, 79);
				// /Users/Abahr/TrailsForward/Assets/_Scripts/Library/StateMachine/StateMachineTransition.g:51:79: ^( VARDECL name type ( args )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(51, 81);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(VARDECL, "VARDECL"), root_1);
